--- a/site/about/index.html
+++ b/site/about/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../img/favicon.ico">
-        <title>Guide - My Docs Site</title>
+        <title>About - My Docs Site</title>
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/fontawesome.min.css" rel="stylesheet">
         <link href="../css/brands.min.css" rel="stylesheet">
@@ -38,10 +38,10 @@
                                 <a href=".." class="nav-link">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../about/" class="nav-link">About</a>
+                                <a href="./" class="nav-link active" aria-current="page">About</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./" class="nav-link active" aria-current="page">Guide</a>
+                                <a href="../guide/" class="nav-link">Guide</a>
                             </li>
                         </ul>
 
@@ -52,12 +52,12 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a rel="prev" href="../about/" class="nav-link">
+                                <a rel="prev" href=".." class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" class="nav-link disabled">
+                                <a rel="next" href="../guide/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -83,7 +83,11 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<p>You’re someone who’s actively working on optimizing PR notifications, specifically integrating GitStream and WorkerB within LinearB to streamline workflow efficiency. Sounds like you’re focused on making dev processes smoother and more automated. Want me to write something more detailed or in a different style—like a bio, fun fact, or something creative?</p></div>
+<p>About Me
+👋 Hi, I'm Ranjana Rani—a passionate Software Engineer &amp; Tech Enthusiast dedicated to building scalable, efficient, and innovative solutions. With a strong background in software development, DevOps, and cloud technologies, I thrive on solving complex problems and optimizing workflows.</p>
+<p>🚀 My expertise spans GitOps, cloud migration, automation, and backend development, where I focus on improving developer experience and streamlining processes. I have experience integrating tools like GitStream, WorkerB, and LinearB to enhance productivity and optimize PR workflows.</p>
+<p>💡 I’m always exploring new technologies and best practices to drive innovation. Whether it's cloud architecture, DevOps automation, or backend optimizations, I love turning ideas into impactful solutions.</p>
+<p>📌 Connect with me on LinkedIn and let’s talk about tech, innovation, and problem-solving!</p></div>
             </div>
         </div>
 
