--- a/site/404.html
+++ b/site/404.html
@@ -38,6 +38,9 @@
                                 <a href="/." class="nav-link">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a href="/about/" class="nav-link">About</a>
+                            </li>
+                            <li class="nav-item">
                                 <a href="/guide/" class="nav-link">Guide</a>
                             </li>
                         </ul>
