--- a/site/index.html
+++ b/site/index.html
@@ -38,6 +38,9 @@
                                 <a href="." class="nav-link active" aria-current="page">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a href="about/" class="nav-link">About</a>
+                            </li>
+                            <li class="nav-item">
                                 <a href="guide/" class="nav-link">Guide</a>
                             </li>
                         </ul>
@@ -54,7 +57,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="guide/" class="nav-link">
+                                <a rel="next" href="about/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
@@ -162,5 +165,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-03-29 03:19:39.144763+00:00
+Build Date UTC : 2025-03-29 03:32:23.431206+00:00
 -->
